Password reset link added

--- a/userpanel/loginPane.html
+++ b/userpanel/loginPane.html
@@ -40,7 +40,7 @@
                 <tbody>
                     <tr>
                         <td><label for="email">Email</label></td>
-                        <td><input id="emailid" class="glowing-border" type="text" name="email"/></td>
+                        <td><input id="emailid" class="glowing-border" type="email" name="email"/></td>
                         <td><span id="email_message"></span></td>
                     </tr>
                     <tr>
@@ -50,7 +50,7 @@
                     </tr>
                     <tr>
                         <td colspan="2"><input type="submit" value="Log in" /></td>
-                        <td><a id="pasword_reset" href="#">Reset password</a></td>
+                        <td><a id="pasword_reset" href="./userpanel/reset.php">Reset password</a></td>
                     </tr>
                 </tbody>
             </table>
