--- a/userpanel/registrationPane.html
+++ b/userpanel/registrationPane.html
@@ -16,7 +16,7 @@
                     </tr>
                     <tr>
                         <td><label for="email">Email</label></td>
-                        <td><input id="email" class="glowing-border" type="text" name="email"/></td>
+                        <td><input id="email" class="glowing-border" type="email" name="email"/></td>
                     </tr>
                     <tr>
                         <td><label for="email">Password</label></td>
